<resources>
    <string name="app_name">SmartBP</string>

    <!-- bottom nav -->
    <string name="nav_measure">Measure</string>
    <string name="nav_history">History</string>
    <string name="nav_setting">Setting</string>

    <!-- measure -->
    <string name="guest_mode">Guest Mode</string>

    <string name="measure_sys">SYS</string>
    <string name="measure_dia">DIA</string>
    <string name="measure_pr">Pulse Rate</string>
    <string name="bp_unit">mmHg</string>
    <string name="pr_unit">BPM</string>
    <string name="action_restart">Restart</string>
    <string name="action_start">Start</string>
    <string name="action_stop_pump">STOP Pumping</string>

    <string name="measure_error">Measure Result Error</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>

    <string name="action_select">SELECT DEVICE</string>
    <string name="action_connect">CONNECT</string>
    <string name="action_connecting">CONNECTING…</string>
    <string name="action_disconnect">DISCONNECT</string>

    <string name="scanner_title">Select device:</string>
    <string name="scanner_empty">No device found</string>
    <string name="battery">%d%%</string>
    <string name="not_available">n/a</string>
    <string name="not_available_value">" - - "</string>
    <string name="no_ble">Device doesn\'t have BLE support!</string>
    <string name="no_apps">No profiles found.</string>
    <string name="not_supported">The device does not have required services.</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_subtitle_not_bonded">AVAILABLE DEVICES:</string>

    <string name="setting_app_version">APP Version</string>
    <string name="setting_dfv">Device Firmware Version</string>
    <string name="setting_dfu">Update</string>
    <string name="setting_update_dfv">Newest Device Firmware Version</string>

    <string name="scanner_permission_rationale">Since Android 6.0 Marshmallow system requires granting access to device\'s location in order to scan for Bluetooth Smart devices. Bluetooth beacons may be used to determine the phone\'s and user\'s location.</string>
    <string name="permission_sd_text">nRF Toolbox would like to copy some sample applications, that may be uploaded onto your nRF51 device using the DFU (Device Firmware Update), to the memory of this device. If you agree, you will be asked to give the application permission to access files on your device.</string>

    <string name="no_required_permission">Permission denied.</string>
    <string name="permission_title">Permission required</string>

    <string name="bonding">Bonding with the device&#8230;</string>
    <string name="bonded">The device is now bonded.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>
</resources>
